// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PDFEducation.vue matches education snapshot 1`] = `
<section id="education" class="resume-section ml-3 mt-2 mb-3">
  <div class="my-auto">
    <h4 class="heading heading-4 pdf-subheading" style="font-family: 'Saira Extra Condensed';">Education</h4>
    <div>
      <div class="resume-item d-flex flex-column justify-content-between">
        <div class="d-flex flex-row">
          <div class="resume-content mr-5 mr-md-auto">
            <h5 class="mb-0" style="font-family: 'Saira Extra Condensed';">sample institution</h5>
          </div>
          <div class="resume-date text-md-right mr-4">
            <h6 class="pdf-education-focus text-primary" style="font-family: 'Saira Extra Condensed';">sample focus</h6>
          </div>
        </div>
        <div class="d-flex flex-column">
          <h6 class="heading heading-6 pdf-degree" style="font-family: 'Saira Extra Condensed';">sample degree</h6>
          <p class="resume-content" style="font-family: 'Open Sans';">sample details</p>
        </div>
      </div>
    </div>
    <div>
      <div class="resume-item d-flex flex-column justify-content-between">
        <div class="d-flex flex-row">
          <div class="resume-content mr-5 mr-md-auto">
            <h5 class="mb-0" style="font-family: 'Saira Extra Condensed';">sample institution</h5>
          </div>
          <div class="resume-date text-md-right mr-4">
            <h6 class="pdf-education-focus text-primary" style="font-family: 'Saira Extra Condensed';">sample focus</h6>
          </div>
        </div>
        <div class="d-flex flex-column">
          <h6 class="heading heading-6 pdf-degree" style="font-family: 'Saira Extra Condensed';">sample degree</h6>
          <p class="resume-content" style="font-family: 'Open Sans';">sample details</p>
        </div>
      </div>
    </div>
    <div>
      <div class="resume-item d-flex flex-column justify-content-between">
        <div class="d-flex flex-row">
          <div class="resume-content mr-5 mr-md-auto">
            <h5 class="mb-0" style="font-family: 'Saira Extra Condensed';">sample institution</h5>
          </div>
          <div class="resume-date text-md-right mr-4">
            <h6 class="pdf-education-focus text-primary" style="font-family: 'Saira Extra Condensed';">sample focus</h6>
          </div>
        </div>
        <div class="d-flex flex-column">
          <h6 class="heading heading-6 pdf-degree" style="font-family: 'Saira Extra Condensed';">sample degree</h6>
          <p class="resume-content" style="font-family: 'Open Sans';">sample details</p>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`PDFEducation.vue matches education snapshot 2`] = `
<section id="education" class="resume-section-render ml-3 mt-2 mb-3">
  <div class="my-auto">
    <h4 class="heading heading-4 pdf-subheading" style="font-family: 'Saira Extra Condensed';">Education</h4>
    <div>
      <div class="resume-item d-flex flex-column justify-content-between">
        <div class="d-flex flex-row">
          <div class="resume-content mr-5 mr-md-auto">
            <h5 class="mb-0" style="font-family: 'Saira Extra Condensed';">sample institution</h5>
          </div>
          <div class="resume-date text-md-right mr-4">
            <h6 class="pdf-education-focus text-primary" style="font-family: 'Saira Extra Condensed';">sample focus</h6>
          </div>
        </div>
        <div class="d-flex flex-column">
          <h6 class="heading heading-6 pdf-degree" style="font-family: 'Saira Extra Condensed';">sample degree</h6>
          <p class="resume-content" style="font-family: 'Open Sans';">sample details</p>
        </div>
      </div>
    </div>
    <div>
      <div class="resume-item d-flex flex-column justify-content-between">
        <div class="d-flex flex-row">
          <div class="resume-content mr-5 mr-md-auto">
            <h5 class="mb-0" style="font-family: 'Saira Extra Condensed';">sample institution</h5>
          </div>
          <div class="resume-date text-md-right mr-4">
            <h6 class="pdf-education-focus text-primary" style="font-family: 'Saira Extra Condensed';">sample focus</h6>
          </div>
        </div>
        <div class="d-flex flex-column">
          <h6 class="heading heading-6 pdf-degree" style="font-family: 'Saira Extra Condensed';">sample degree</h6>
          <p class="resume-content" style="font-family: 'Open Sans';">sample details</p>
        </div>
      </div>
    </div>
    <div>
      <div class="resume-item d-flex flex-column justify-content-between">
        <div class="d-flex flex-row">
          <div class="resume-content mr-5 mr-md-auto">
            <h5 class="mb-0" style="font-family: 'Saira Extra Condensed';">sample institution</h5>
          </div>
          <div class="resume-date text-md-right mr-4">
            <h6 class="pdf-education-focus text-primary" style="font-family: 'Saira Extra Condensed';">sample focus</h6>
          </div>
        </div>
        <div class="d-flex flex-column">
          <h6 class="heading heading-6 pdf-degree" style="font-family: 'Saira Extra Condensed';">sample degree</h6>
          <p class="resume-content" style="font-family: 'Open Sans';">sample details</p>
        </div>
      </div>
    </div>
  </div>
</section>
`;
